--- a/navigationBarItemSample/Base.lproj/Main.storyboard
+++ b/navigationBarItemSample/Base.lproj/Main.storyboard
@@ -70,19 +70,19 @@
                         <viewControllerLayoutGuide type="top" id="zvo-dd-3SW"/>
                         <viewControllerLayoutGuide type="bottom" id="tUg-6Z-M8B"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="MMQ-IT-qOo">
+                    <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="mWG-Fu-l4q">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Detail view content goes here" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Lei-5M-9Gs">
-                                <rect key="frame" x="20" y="276" width="280" height="17"/>
+                                <rect key="frame" x="64" y="141" width="191" height="17"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" size="system"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3xP-vq-uTY">
-                                <rect key="frame" x="0.0" y="64" width="320" height="101"/>
+                                <rect key="frame" x="0.0" y="0.0" width="321" height="101"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -90,16 +90,17 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" constant="20" symbolic="YES" id="62x-JV-TTJ"/>
-                            <constraint firstItem="3xP-vq-uTY" firstAttribute="leading" secondItem="MMQ-IT-qOo" secondAttribute="leading" id="Ekg-dJ-qXh"/>
-                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="centerY" secondItem="MMQ-IT-qOo" secondAttribute="centerY" id="JzS-HC-Rnl"/>
-                            <constraint firstItem="3xP-vq-uTY" firstAttribute="centerX" secondItem="Lei-5M-9Gs" secondAttribute="centerX" id="kCh-fN-IVa"/>
-                            <constraint firstAttribute="trailing" secondItem="Lei-5M-9Gs" secondAttribute="trailing" constant="20" symbolic="YES" id="pXB-RP-Zz6"/>
-                            <constraint firstItem="3xP-vq-uTY" firstAttribute="top" secondItem="zvo-dd-3SW" secondAttribute="bottom" id="wNA-c9-Lxy"/>
+                            <constraint firstItem="3xP-vq-uTY" firstAttribute="centerX" secondItem="mWG-Fu-l4q" secondAttribute="centerX" id="BKw-Pe-EmS"/>
+                            <constraint firstItem="Lei-5M-9Gs" firstAttribute="top" secondItem="3xP-vq-uTY" secondAttribute="bottom" constant="40" id="Dl9-pv-T0N"/>
+                            <constraint firstItem="3xP-vq-uTY" firstAttribute="centerX" secondItem="Lei-5M-9Gs" secondAttribute="centerX" constant="1" id="DlF-fN-RhU"/>
+                            <constraint firstItem="3xP-vq-uTY" firstAttribute="top" secondItem="mWG-Fu-l4q" secondAttribute="top" id="PAn-eQ-eSR"/>
+                            <constraint firstAttribute="trailing" secondItem="3xP-vq-uTY" secondAttribute="trailing" id="WYV-Ms-HCY"/>
+                            <constraint firstItem="3xP-vq-uTY" firstAttribute="leading" secondItem="mWG-Fu-l4q" secondAttribute="leading" id="dmI-Kx-PnD"/>
+                            <constraint firstAttribute="bottom" secondItem="3xP-vq-uTY" secondAttribute="bottom" constant="467" id="mbE-31-Syd"/>
                         </constraints>
-                    </view>
+                    </scrollView>
                     <navigationItem key="navigationItem" title="Detail" id="cra-N8-TIN"/>
                     <connections>
                         <outlet property="detailDescriptionLabel" destination="Lei-5M-9Gs" id="sCT-F7-F6f"/>
